2006-03-01 Shiyun Yie <shiyun.yie@hp.com>
        * Fixed 600x600x2 issue with HP mono PPDs

2006-02-27  Tim Waugh  <twaugh@redhat.com>

	* printer/HP-DeskJet_5940.xml: Fixed IEEE 1284 information (RH
	  bug #183090).

2006-02-25  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DesignJet_100.xml, printer/HP-DesignJet_500.xml,
	  printer/HP-DesignJet_800.xml, printer/HP-DesignJet_5000.xml,
	  printer/HP-DesignJet_5500.xml, driver/chp2200.xml,
	  opt/largeformat-PageSize.xml, opt/2.xml: Added HP DesignJet 100,
	  500, 800, and 5000, marked HP DesignJet as working with the
	  "chp2200" driver.

	* opt/largeformat-PageSize.xml: Added ANSI paper sizes.

2006-02-24  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-Stylus_CX3700.xml,
	  printer/Epson-Stylus_CX3810.xml,
	  printer/Epson-Stylus_CX3800.xml,
	  printer/Epson-Stylus_CX3805.xml,
	  printer/Epson-Stylus_DX3800.xml,
	  printer/Epson-Stylus_DX3850.xml,
	  printer/Epson-Stylus_CX5100.xml,
	  printer/Epson-Stylus_CX5300.xml,
	  printer/Epson-Stylus_CX5700.xml,
	  printer/Epson-Stylus_CX5800.xml,
	  printer/Epson-Stylus_CX6300.xml,
	  printer/Epson-Stylus_CX6500.xml,
	  printer/Epson-Stylus_CX6600.xml,
	  printer/Epson-Stylus_CX8300.xml,
	  printer/Epson-Stylus_CX8400.xml, printer/Epson-Stylus_D68.xml,
	  printer/Epson-Stylus_D88.xml,
	  printer/Epson-Stylus_Photo_935.xml,
	  printer/Epson-Stylus_Photo_R210.xml,
	  printer/Epson-Stylus_Photo_R220.xml,
	  printer/Epson-Stylus_Photo_R310.xml,
	  printer/Epson-Stylus_Photo_R320.xml,
	  printer/Epson-Stylus_Photo_R340.xml,
	  printer/Epson-Stylus_Photo_R2400.xml,
	  printer/Epson-Stylus_Photo_RX400.xml,
	  printer/Epson-Stylus_Photo_RX420.xml,
	  printer/Epson-Stylus_Photo_RX425.xml,
	  printer/Epson-Stylus_Photo_RX430.xml,
	  printer/Epson-Stylus_Photo_RX510.xml,
	  printer/Epson-Stylus_Photo_RX620.xml,
	  printer/Epson-Stylus_Photo_RX630.xml,
	  printer/Epson-Stylus_Photo_RX700.xml, printer/Epson-E_100.xml,