@@ -1,3 +1,8 @@
+2006-03-02  Tim Waugh <twaugh@redhat.com>
+
+	* printer/Epson-Stylus_Photo_825.xml: Added IEEE 1284 information (RH
+	  bug #183540).
+
 2006-03-01 Shiyun Yie <shiyun.yie@hp.com>
         * Fixed 600x600x2 issue with HP mono PPDs
 
